--- a/Informacion/informacion.html
+++ b/Informacion/informacion.html
@@ -77,7 +77,7 @@
         <!-- BOTÓN VOLVER CON ANIMACIÓN -->
         <a href="/index.html" class="group text-cura-accentLight hover:text-white transition-all duration-300 flex items-center gap-1 hover:-translate-y-0.5">
             <span class="transition-transform duration-300 group-hover:-translate-x-1 font-bold text-lg">←</span> 
-            Volver
+            Volver a la página principal
         </a>
         <a href="#sumate" class="text-cura-accentLight hover:text-white transition-colors uppercase font-bold nav-scroll-link">
             Sumate
@@ -145,7 +145,7 @@
             </div>
 
             <!-- 
-                COLUMNA DERECHA: RECUADROS EDITABLES 
+                COLUMNA DERECHA: RECUADROS EDITABLES (Ahora son enlaces)
                 - order-1: En celular va PRIMERO (arriba).
                 - md:order-2: En PC va SEGUNDO (derecha).
             -->
@@ -153,84 +153,84 @@
                 <div class="grid sm:grid-cols-2 gap-4">
                     
                     <!-- Recuadro 1 -->
-                    <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-colors">
+                    <a href="/Informacion/fundamentos.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
                         <h3 class="text-base font-bold text-white mb-2">Fundamentos de la Ley</h3>
                         <p class="text-xs md:text-sm text-cura-accentLight">
                             Explicación detallada sobre por qué es necesaria la unificación de datos y cómo impacta positivamente en la sociedad.
                         </p>
-                    </div>
+                    </a>
 
                     <!-- Recuadro 2 -->
-                    <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-colors">
+                    <a href="/Informacion/implementacion-tecnica.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
                         <h3 class="text-base font-bold text-white mb-2">Implementación Técnica</h3>
                         <p class="text-xs md:text-sm text-cura-accentLight">
                             Detalles sobre la infraestructura de blockchain y seguridad que garantizarán la privacidad de los datos.
                         </p>
-                    </div>
+                    </a>
 
                     <!-- Recuadro 3 -->
-                    <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-colors">
+                    <a href="/Informacion/alcance-federal.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
                         <h3 class="text-base font-bold text-white mb-2">Alcance Federal</h3>
                         <p class="text-xs md:text-sm text-cura-accentLight">
                             Cómo se integrarán las provincias y municipios al sistema nacional de salud digital de manera progresiva.
                         </p>
-                    </div>
+                    </a>
 
                     <!-- Recuadro 4 -->
-                    <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-colors">
+                    <a href="/Informacion/beneficios-medicos.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
                         <h3 class="text-base font-bold text-white mb-2">Beneficios Médicos</h3>
                         <p class="text-xs md:text-sm text-cura-accentLight">
                             Herramientas para profesionales: acceso rápido a historias clínicas, reducción de errores y diagnósticos precisos.
                         </p>
-                    </div>
+                    </a>
 
                     <!-- Recuadro 5 -->
-                    <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-colors">
+                    <a href="/Informacion/marco-legal.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
                         <h3 class="text-base font-bold text-white mb-2">Marco Legal</h3>
                         <p class="text-xs md:text-sm text-cura-accentLight">
                             Análisis de las leyes vigentes de protección de datos y cómo la Ley C.U.R.A. se adapta y mejora la normativa actual.
                         </p>
-                    </div>
+                    </a>
 
                     <!-- Recuadro 6 -->
-                    <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-colors">
+                    <a href="/Informacion/participacion.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
                         <h3 class="text-base font-bold text-white mb-2">Participación Ciudadana</h3>
                         <p class="text-xs md:text-sm text-cura-accentLight">
                             Mecanismos para que la sociedad civil audite y proponga mejoras continuas al sistema.
                         </p>
-                    </div>
+                    </a>
 
                     <!-- Recuadro 7 -->
-                    <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-colors">
+                    <a href="/Informacion/roadmap.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
                         <h3 class="text-base font-bold text-white mb-2">Roadmap 2026</h3>
                         <p class="text-xs md:text-sm text-cura-accentLight">
                             Cronograma tentativo de desarrollo, pruebas piloto y lanzamiento oficial en el congreso.
                         </p>
-                    </div>
+                    </a>
 
                     <!-- Recuadro 8 -->
-                    <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-colors">
+                    <a href="/Informacion/faq.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
                         <h3 class="text-base font-bold text-white mb-2">Preguntas Frecuentes</h3>
                         <p class="text-xs md:text-sm text-cura-accentLight">
                             Respuestas a las dudas más comunes sobre seguridad, acceso y uso de la credencial digital.
                         </p>
-                    </div>
+                    </a>
 
                     <!-- Recuadro 9 -->
-                    <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-colors">
+                    <a href="/Informacion/equipo.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
                         <h3 class="text-base font-bold text-white mb-2">Equipo de Trabajo</h3>
                         <p class="text-xs md:text-sm text-cura-accentLight">
                             Conoce a los profesionales, desarrolladores y especialistas en salud que impulsan este proyecto.
                         </p>
-                    </div>
+                    </a>
 
                     <!-- Recuadro 10 -->
-                    <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-colors">
+                    <a href="/Informacion/recursos.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
                         <h3 class="text-base font-bold text-white mb-2">Recursos Descargables</h3>
                         <p class="text-xs md:text-sm text-cura-accentLight">
                             Acceso a PDFs, whitepapers y material gráfico para difundir la iniciativa en tu comunidad.
                         </p>
-                    </div>
+                    </a>
 
                 </div>
             </div>
@@ -269,7 +269,7 @@
             <label class="block text-xs font-medium text-red-400 mb-1">Provincia *</label>
             <select name="provincia" required
                     class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary bg-white text-cura-primary">
-              <option value="">Seleccioná una provincia</option>
+              <option value="">Seleccioná una ciudad</option>
               <option value="Buenos Aires">Buenos Aires</option>
               <option value="Ciudad Autónoma de Buenos Aires">Ciudad Autónoma de Buenos Aires</option>
               <option value="Catamarca">Catamarca</option>
