--- a/Informacion/informacion.html
+++ b/Informacion/informacion.html
@@ -77,7 +77,7 @@
         <!-- BOTÓN VOLVER CON ANIMACIÓN -->
         <a href="/index.html" class="group text-cura-accentLight hover:text-white transition-all duration-300 flex items-center gap-1 hover:-translate-y-0.5">
             <span class="transition-transform duration-300 group-hover:-translate-x-1 font-bold text-lg">←</span> 
-            Volver a la página principal
+            Volver
         </a>
         <a href="#sumate" class="text-cura-accentLight hover:text-white transition-colors uppercase font-bold nav-scroll-link">
             Sumate
