--- a/Informacion/informacion.html
+++ b/Informacion/informacion.html
@@ -55,7 +55,7 @@
 
   <!-- Aviso Superior -->
   <div class="w-full bg-yellow-50 text-center text-xs text-yellow-900 py-2 px-4">
-    La ley se encuentra en revisión técnica y estará disponible próximamente en la web.
+   PAGINA WEB ACTUALMENTE EN MANTENIMIENTO.
   </div>
 
   <!-- Header -->
