Actualizar informacion.html
cambio de bio

--- a/Informacion/informacion.html
+++ b/Informacion/informacion.html
@@ -129,16 +129,17 @@
                     <!-- Texto Biografía -->
                     <div class="text-sm text-cura-accentLight text-left mt-3 space-y-3 leading-relaxed">
                         <p>
-                            Franco Agustín Paganini es técnico en sistemas con más de diez años de experiencia en soporte, infraestructura y soluciones tecnológicas aplicadas al sector público. Complementó su formación con certificaciones internacionales en <strong>Interoperabilidad en Salud, Estándar FHIR HL7, Sistemas de Información en Salud, Legislación y técnica normativa, Derecho presupuestario</strong>, y múltiples cursos de la OPS/OMS orientados a la digitalización sanitaria.
+                            Franco Agustín Paganini es Técnico en Sistemas con más de diez años de experiencia en soporte, infraestructura y soluciones tecnológicas aplicadas al sector público. Complementó su formación con certificaciones internacionales en Interoperabilidad en Salud (OPS/OMS), Estándar FHIR HL7, Sistemas de Información en Salud, Derecho Presupuestario, Legislación y Técnica Normativa</strong>, y otras especializaciones vinculadas a la modernización del Estado.
                         </p>
+<p> Actualmente cursa el Programa <steong>Especializado en Gestión de Salud Digital (ADEN Business School + George Washington University)</steong>, orientado a transformación digital sanitaria, seguridad del paciente, telesalud e implementación de sistemas de información en salud. </p>
                         <p>
-                           Su trabajo se centra en la modernización del Estado, la transformación digital y el diseño de herramientas que mejoren la calidad, eficiencia y transparencia de los servicios públicos. Actualmente está al frente del desarrollo de la <strong>Ley C.U.R.A.</strong>, una iniciativa que busca unificar la historia clínica, optimizar procesos médicos y garantizar un sistema sanitario más seguro, moderno e inclusivo para toda la población.
+                           Su trabajo se centra en la transformación digital, la mejora de la gestión pública y el diseño de herramientas concretas que aumenten la calidad, eficiencia y transparencia del sistema sanitario. <strong>Desde principios del 2025 impulsa el desarrollo de la Ley C.U.R.A.</strong>, una iniciativa integral que propone <strong>unificar la historia clínica, estandarizar procesos médicos y garantizar seguridad, trazabilidad e interoperabilidad plena en todo el país.</strong>
                         </p>
                            <p>
-                          La motivación del proyecto nace de experiencias personales dentro del sistema de salud, donde vivió de primera mano problemas de fragmentación, falta de interoperabilidad, pérdida de información, trámites repetitivos, demoras, diagnósticos inconexos y situaciones que pusieron en riesgo la atención médica. Esta vivencia lo impulsó a transformar esa frustración en una propuesta concreta, técnica y viable para que ninguna persona vuelva a pasar por lo mismo.
+                          La motivación del proyecto surge de experiencias personales dentro del sistema de salud, donde vivió en carne propia la fragmentación, la pérdida de información, la falta de interoperabilidad, diagnósticos inconexos, trámites repetidos y situaciones que impactaron en su atención médica. Ese recorrido lo llevó a transformar la frustración en una propuesta técnica, normativa y operativa con una sola meta: que ninguna persona vuelva a atravesar esos problemas.
                         </p>
                            <p>
-                          Con una visión centrada en el paciente, un enfoque técnico sólido y un compromiso real con la mejora del sistema sanitario, Franco impulsa la Ley C.U.R.A. como un cambio estructural necesario para el futuro de la salud en Argentina.
+                          Con una visión centrada en el paciente, un enfoque práctico y un compromiso real con la modernización del sistema sanitario, Franco impulsa la Ley C.U.R.A. como un cambio estructural necesario para el futuro de la salud en Argentina.
                         </p>
                     </div>
                 </div>
